# duinoCoinMiner

./: CMakeLists.txt
i2c_slave/: ._CMakeLists.txt  ._i2c_slave.c  Makefile  cmake_install.cmake
i2c_slave/include/: ._i2c_fifo.h
minerMaster/: CMakeLists.txt  Makefile  cmake_install.cmake  hwSetupUtils.cpp  minerMaster.cpp
minerSlave/: CMakeLists.txt  hwSetupUtils.cpp  hwSetupUtils.h  minerSlave.cpp
port/mbedtls/inc/: ssl_config.h
utils/: CMakeLists.txt  Wire.cpp  Wire.h  charbuffer.cpp  charbuffer.h  duinoCoinUtils.c  duinoCoinUtils.cpp  duinoCoinUtils.h  hwSetupUtils.c  hwSetupUtils.cpp  hwSetupUtils.h
